# blackness

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README_zh.md
playground/: CMakeLists.txt  playground.cpp
resources/position/: circular.txt
src/: CMakeLists.txt  blackhole.h  blackness.cpp  camera.h  fs.h  image.h  image_generator.cpp  image_generator.h  movie_writer.cpp  movie_writer.h  pch.h  skybox.h  util.h  video_generator.cpp  video_generator.h
src/gui/: main_window.cpp  main_window.h  main_window.ui
src/metric/: common.cpp  common.h  flat.cpp  flat.h  schwarzschild.cpp  schwarzschild.h
test/: CMakeLists.txt  image_test.cpp  test.cpp  video_generator_test.cpp
